# embed_server

./: .gitignore  LICENSE  Pipfile  README.md  cache.py  embed_server.py  embed_server.service  pyproject.toml  tester.py
