[tool.poetry]
name = "embed-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sentence-transformers = "*"
fastapi = "*"
uvicorn = "*"
msgpack = "*"
sqlitedict = "*"
more-itertools = "^9.1.0"
openai = "^1.10.0"
embedapi = {git = "https://github.com/CrazyPython/embedapi.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
