[tool.poetry]
name = "embed-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "*"
uvicorn = "*"
msgpack = "*"
sqlitedict = "*"
more-itertools = "^9.1.0"
openai = "^1.10.0"
embedapi = { path = "../modules/embedapi" }
sentence-transformers = "2.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
